# interstellar

./: .env.example  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml  pytest.ini
.circleci/: config.yml
modules/app/: application_bootstrapper.py
modules/github/: account_config.py  github_config_parser.py  github_module.py
src/interstellar/framework/: element.py  main_config.py
src/transstellar/api_client/: api_client.py
src/transstellar/framework/: __init__.py  application.py  base_page.py  base_ui_test.py  element.py  router.py
tests/: conftest.py  test_github_api.py
tests/integration/: test_github_api.py
tests/integration/API/: test_github_api.py
tests/unit/api_client/: test_api_client.py  test_api_resource.py
tests/unit/framework/: test_application.py  test_base_page.py  test_element.py  test_handle_ui_error.py  test_main_config.py  test_module.py  test_router.py
tests/unit/html/: test_button.py  test_input.py
