[tool.poetry]
name = "interstellar"
version = "0.1.0"
description = "A pytest framework"
authors = ["Onramplab Dev <dev@onramplab.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
pytest-xdist = "^3.5.0"
injector = "^0.21.0"
pyyaml = "^6.0"
selenium = "^4.18.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

